# analog-library

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: build.yaml
.github/workflows/: build.yml  ci.yml  deploy.yml
assets/: bookmarklet.js  home.html  style.css  userscript.js
src/: bib.rs  core.rs  crossref.rs  jats.rs  main.rs  serve.rs  ss.rs  view.rs  webcache.rs
templates/: paper.html
