[package]
name = "dull"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
basset = "0.1.0"
maud = { version = "*", features = ["axum"] }
sled = "0.34"
thiserror = "2"
quick-xml = "0.39"
