[package]
name = "analog-library"
version = "0.0.6"
edition = "2024"
repository = "https://github.com/sampsyo/analog-library"

[[bin]]
name = "al"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
basset = "0.1.0"
maud = { version = "*", features = ["axum"] }
sled = "0.34"
thiserror = "2"
quick-xml = "0.39"
url = "2"
mime = "0.3"
pico-args = "0.5"

[profile.profiling]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
